# synthwave

./: .gitignore  LICENSE.md  README.md  example.py  pyproject.toml
docs/: Makefile
docs/doctrees/: environment.pickle  field.doctree  index.doctree
docs/html/: .buildinfo  example.html  field.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/_sources/: example.rst.txt  field.rst.txt  index.rst.txt
docs/source/: conf.py
synthwave/: __init__.py  __main__.py  data.json  event.py  field.py  schema.py  stream.py  utils.py
tests/: test_event.py  test_fields.py  test_schema.py
utils/: data_prep.py
utils/dev_data/: emails.txt  names.txt
