[tool.poetry]
name = "synthwave"
version = "0.1.7"
description = ""
authors = ["Mat Leonard <leonard.mat@gmail.com>"]
readme = "README.md"
license = "BSD 3-Clause"
homepage = "https://mcleonard.github.io/synthwave/html/index.html"
repository = "https://github.com/mcleonard/synthwave"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
validators = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pandas = "^2.0.1"
black = "^23.3.0"
mypy = "^1.3.0"
sphinx = "^7.0.1"
furo = "^2023.5.20"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
